--- a/src/devices/android/android.css
+++ b/src/devices/android/android.css
@@ -1,8 +1,4 @@
-﻿.libraryMenuButtonText {
-    font-weight: 500 !important;
-}
-
-@media all and (min-width: 300px) {
+﻿@media all and (min-width: 300px) {
 
     .libraryViewNav, .emby-tabs-slider {
         display: flex;
