--- a/src/devices/ios/ios.css
+++ b/src/devices/ios/ios.css
@@ -1,12 +1,4 @@
-﻿.pageWithAbsoluteTabs:not(.noSecondaryNavPage) {
-    padding-top: 88px !important;
-}
-
-.libraryPage:not(.noSecondaryNavPage) {
-    padding-top: 85px !important;
-}
-
-.backdropContainer {
+﻿.backdropContainer {
     /* This isn't implemented right and ends up looking terrible */
     background-attachment: initial;
 }
