--- a/src/components/appfooter/appfooter.css
+++ b/src/components/appfooter/appfooter.css
@@ -1,5 +1,5 @@
 ﻿.appfooter {
-    background: #1c1c1c;
+    background: #101010;
     position: fixed;
     left: 0;
     right: 0;
@@ -7,6 +7,7 @@
     bottom: 0;
     transition: transform 180ms linear;
     contain: layout style;
+    border-top: 1px solid #202020;
 }
 
 .appfooter-blurred {
