--- a/src/css/videoosd.css
+++ b/src/css/videoosd.css
@@ -85,7 +85,7 @@
     right: 0;
     background-color: rgba(0, 0, 0, .7);
     color: #fff;
-    padding: 1%;
+    padding: 1em;
     display: flex;
     flex-direction: row;
     will-change: transform;
@@ -153,22 +153,38 @@
         -ms-user-select: none;
     }
 
+.osdParentTitle {
+    opacity: 1;
+    margin: 0;
+}
+
 .osdTitle {
     margin: 0;
-    padding-left: .4em;
+    opacity: 1;
+}
+
+.osdTitleSmall {
+    margin: 0;
+    opacity: 1;
 }
 
 .osdMediaInfo {
     margin-left: 1em;
     color: #eee;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+}
+
+.osdSecondaryMediaInfo {
+    padding-left: .6em;
 }
 
 .osdTextContainer {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     user-select: none;
+    margin-bottom: .5em;
+    padding-left: .5em;
 }
 
 .pageContainer {
