--- a/src/css/videoosd.css
+++ b/src/css/videoosd.css
@@ -161,15 +161,16 @@
 .osdTitle {
     margin: 0;
     opacity: 1;
+    margin-right: .5em;
 }
 
 .osdTitleSmall {
     margin: 0;
     opacity: 1;
+    margin-right: 1em;
 }
 
 .osdMediaInfo {
-    margin-left: 1em;
     color: #eee;
     display: flex;
     align-items: center;
@@ -183,7 +184,7 @@
     display: flex;
     align-items: center;
     user-select: none;
-    margin-bottom: .5em;
+    margin-bottom: .7em;
     padding-left: .5em;
 }
 
