--- a/src/components/appfooter/appfooter.css
+++ b/src/components/appfooter/appfooter.css
@@ -10,12 +10,15 @@
     border-top: 1px solid #202020;
 }
 
-.appfooter-blurred {
-    background: rgba(28,28,28,.92);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-}
+    .appfooter.headroom--unpinned {
+        transform: translateY(100%);
+    }
 
-.appfooter.headroom--unpinned {
-    transform: translateY(100%);
+@supports ( (backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px)) ) {
+
+    .appfooter-blurred {
+        background: rgba(28,28,28,.72);
+        -webkit-backdrop-filter: blur(20px);
+        backdrop-filter: blur(20px);
+    }
 }
