--- a/src/css/videoosd.css
+++ b/src/css/videoosd.css
@@ -85,7 +85,7 @@
     right: 0;
     background-color: rgba(0, 0, 0, .7);
     color: #fff;
-    padding: 1em;
+    padding: 1%;
     display: flex;
     flex-direction: row;
     will-change: transform;
@@ -161,7 +161,7 @@
 .osdTitle {
     margin: 0;
     opacity: 1;
-    margin-right: .5em;
+    margin-right: 1em;
 }
 
 .osdTitleSmall {
