update main tabs

--- a/src/components/dockedtabs/dockedtabs.css
+++ b/src/components/dockedtabs/dockedtabs.css
@@ -16,6 +16,7 @@
     text-align: center;
     border-color: transparent !important;
     border-width: 0 !important;
+    font-weight: normal !important;
 }
 
 .dockedtabs-tab-button {
